--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -66,7 +66,7 @@
 "Human Web" = "Human Web";
 
 /* Block Ads setting */
-"Block Ads" = "Werbung blockieren";
+"Block Ads" = "Bekannte Ad-Server blockieren";
 
 /* Settings item for clearing favorite history */
 "Include favorites" = "Inklusive Favoriten";
