--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -66,7 +66,7 @@
 "Human Web" = "Human Web";
 
 /* Block Ads setting */
-"Block Ads" = "Block Ads";
+"Block Ads" = "Block known ad servers";
 
 /* Settings item for clearing favorite history */
 "Include favorites" = "Include favorites";
