Modified localization for private tab to replace `FireFox` by `CLIQZ`

--- a/Client/cy.lproj/PrivateBrowsing.strings
+++ b/Client/cy.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Cau Tabiau Preifat";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Fydd Firefox ddim yn cofio unrhyw hanes na chwcis ond bydd nodau tudalen newydd yn cael eu cadw.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Fydd CLIQZ ddim yn cofio unrhyw hanes na chwcis ond bydd nodau tudalen newydd yn cael eu cadw.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Dysgu Rhagor";
