--- a/Client/eo.lproj/PrivateBrowsing.strings
+++ b/Client/eo.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Fermi privatajn langetojn";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox ne memoros vian historion aŭ kuketojn, sed novaj legosignoj estos konservitaj.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ ne memoros vian historion aŭ kuketojn, sed novaj legosignoj estos konservitaj.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Pli da informo";
