--- a/Client/hsb.lproj/PrivateBrowsing.strings
+++ b/Client/hsb.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Priwatne rajtarki začinić";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox njebudźe sej wašu historiju abo placki spomjatkować, ale nowe zapołožki budu so składować.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ njebudźe sej wašu historiju abo placki spomjatkować, ale nowe zapołožki budu so składować.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Dalše informacije";
