--- a/Client/pt-PT.lproj/PrivateBrowsing.strings
+++ b/Client/pt-PT.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Fechar separadores privados";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "O Firefox não irá guardar qualquer histórico ou cookies, mas os novos marcadores serão guardados.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "O CLIQZ não irá guardar qualquer histórico ou cookies, mas os novos marcadores serão guardados.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Saber mais";
