--- a/Client/ro.lproj/PrivateBrowsing.strings
+++ b/Client/ro.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Închide filele private";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox nu va memora niciun istoric sau cookie, însă noile semne de carte vor fi salvate.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ nu va memora niciun istoric sau cookie, însă noile semne de carte vor fi salvate.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Află mai multe";
