--- a/Client/az.lproj/PrivateBrowsing.strings
+++ b/Client/az.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Məxfi Vərəqləri Qapat";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox sizin tarixçə və ya çərəzlərinizi yadda saxlamayacaq, lakin yeni əlfəcinlər yaddaşa yazılacaq.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ sizin tarixçə və ya çərəzlərinizi yadda saxlamayacaq, lakin yeni əlfəcinlər yaddaşa yazılacaq.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Ətraflı Öyrən";
