--- a/Client/bg.lproj/PrivateBrowsing.strings
+++ b/Client/bg.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Затвори лични подпрозорци";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox няма да запомни нищо от вашата история или cookies, но нови отметки ще бъдат запазени.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ няма да запомни нищо от вашата история или cookies, но нови отметки ще бъдат запазени.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Научи повече";
