--- a/Client/br.lproj/PrivateBrowsing.strings
+++ b/Client/br.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Serriñ an ivinelloù prevez";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Ne vo ket dalc'het soñj eus ho roll istor nag eus ho toupinoù gant Firefox, met enrollet e vo ar sinedoù nevez.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Ne vo ket dalc'het soñj eus ho roll istor nag eus ho toupinoù gant CLIQZ, met enrollet e vo ar sinedoù nevez.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Gouzout hiroc'h";
