--- a/Client/cs.lproj/PrivateBrowsing.strings
+++ b/Client/cs.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Zavřít anonymní panely";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox si nebude pamatovat vaši historii ani ukládat cookies, ale vytvořené záložky budou uloženy.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ si nebude pamatovat vaši historii ani ukládat cookies, ale vytvořené záložky budou uloženy.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Zjistit více";
