--- a/Client/de.lproj/PrivateBrowsing.strings
+++ b/Client/de.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Private Tabs schließen";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox wird weder Chronik noch Cookies speichern. Neue Lesezeichen können jedoch gespeichert werden.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ wird weder Chronik noch Cookies speichern. Neue Lesezeichen können jedoch gespeichert werden.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Mehr erfahren";
