--- a/Client/en.lproj/PrivateBrowsing.strings
+++ b/Client/en.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Close Private Tabs";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox won't remember any of your history or cookies, but new bookmarks will be saved.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ won't remember any of your history or cookies, but new bookmarks will be saved.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Learn More";
