--- a/Client/es-CL.lproj/PrivateBrowsing.strings
+++ b/Client/es-CL.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Cerrar pestañas privadas";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox no recordará su historial de navegación o cookies, pero los nuevos marcadores serán guardados.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ no recordará su historial de navegación o cookies, pero los nuevos marcadores serán guardados.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Aprender más";
