--- a/Client/fa.lproj/PrivateBrowsing.strings
+++ b/Client/fa.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "بستن زبانه‌های خصوصی";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "فایرفاکس هیچ‌گونه تاریخچه یا کوکی از شما به خاطر نمی‌سپارد، ولی نشانک‌های جدید ذخیره خواهد شد.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "كليكز هیچ‌گونه تاریخچه یا کوکی از شما به خاطر نمی‌سپارد، ولی نشانک‌های جدید ذخیره خواهد شد.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "بیشتر بدانید";
