--- a/Client/fr.lproj/PrivateBrowsing.strings
+++ b/Client/fr.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Fermer les onglets privés";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox ne conservera aucun historique ni aucun cookie, cependant les nouveaux marque-pages seront conservés.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ ne conservera aucun historique ni aucun cookie, cependant les nouveaux marque-pages seront conservés.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "En savoir plus";
