--- a/Client/id.lproj/PrivateBrowsing.strings
+++ b/Client/id.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Tutup Tab Pribadi";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox tidak akan mengingat semua riwayat atau kuki, tetapi markah baru akan tetap disimpan.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ tidak akan mengingat semua riwayat atau kuki, tetapi markah baru akan tetap disimpan.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Pelajari Lebih Lanjut";
