--- a/Client/is.lproj/PrivateBrowsing.strings
+++ b/Client/is.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Loka einkaflipum";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox man ekki ferilinn þinn né smákökur en ný bókarmerki munu vistast.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ man ekki ferilinn þinn né smákökur en ný bókarmerki munu vistast.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Fræðast meira";
