--- a/Client/it.lproj/PrivateBrowsing.strings
+++ b/Client/it.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Chiudi le schede anonime";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox non conserverà alcuna cronologia o cookie per questa finestra. I segnalibri aggiunti verranno comunque conservati sul dispositivo.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ non conserverà alcuna cronologia o cookie per questa finestra. I segnalibri aggiunti verranno comunque conservati sul dispositivo.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Ulteriori informazioni";
