--- a/Client/lo.lproj/PrivateBrowsing.strings
+++ b/Client/lo.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "ປິດແທັບສ່ວນຕົວ";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox ຈະບໍ່ບັນທຶກທຸກໆປະຫວັດການໃຊ້ງານ ຫລື ຄຸກກີຂອງທ່ານ, ແຕ່ວ່າຈະບັນທຶກບຸກມາກໃຫມ່ໄວ້.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ ຈະບໍ່ບັນທຶກທຸກໆປະຫວັດການໃຊ້ງານ ຫລື ຄຸກກີຂອງທ່ານ, ແຕ່ວ່າຈະບັນທຶກບຸກມາກໃຫມ່ໄວ້.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "ຮຽນຮູ້ເພີ່ມເຕີມ";
