--- a/Client/lv.lproj/PrivateBrowsing.strings
+++ b/Client/lv.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Aizvērt privātās cilnes";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox neatcerēsies apmeklēto lapu vēsturi un sīkdatnes, bet jaunās grāmatzīmes tiks saglabātas jūsu ierīcē.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ neatcerēsies apmeklēto lapu vēsturi un sīkdatnes, bet jaunās grāmatzīmes tiks saglabātas jūsu ierīcē.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Uzzināt vairāk";
