--- a/Client/nl.lproj/PrivateBrowsing.strings
+++ b/Client/nl.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Privétabbladen sluiten";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox zal geen geschiedenis of cookies onthouden, maar nieuwe bladwijzers zullen worden opgeslagen.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ zal geen geschiedenis of cookies onthouden, maar nieuwe bladwijzers zullen worden opgeslagen.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Meer info";
