--- a/Client/nn.lproj/PrivateBrowsing.strings
+++ b/Client/nn.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Lat att private faner";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox kjem ikkje til å hugsa historikk eller infokapslar, men nye bokmerke vert lagra.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ kjem ikkje til å hugsa historikk eller infokapslar, men nye bokmerke vert lagra.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Lær meir";
