--- a/Client/pl.lproj/PrivateBrowsing.strings
+++ b/Client/pl.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Zamykanie prywatnych kart";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox nie zachowa historii przeglądania ani ciasteczek (dodane zakładki zostaną zachowane)";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ nie zachowa historii przeglądania ani ciasteczek (dodane zakładki zostaną zachowane)";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Więcej informacji";
