--- a/Client/pt-BR.lproj/PrivateBrowsing.strings
+++ b/Client/pt-BR.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Fechar abas privadas";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "O Firefox não salvará seu histórico ou cookies, mas novos favoritos serão salvos.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "O CLIQZ não salvará seu histórico ou cookies, mas novos favoritos serão salvos.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Saiba mais";
