--- a/Client/rm.lproj/PrivateBrowsing.strings
+++ b/Client/rm.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Serrar ils tabs privats";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox na memorisescha betg la cronologia u cookies ma novs segnapaginas vegnan memorisads.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ na memorisescha betg la cronologia u cookies ma novs segnapaginas vegnan memorisads.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Ulteriuras infurmaziuns";
