--- a/Client/ru.lproj/PrivateBrowsing.strings
+++ b/Client/ru.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Закрывать приватные вкладки";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox не будет запоминать ничего из вашей истории или кук, но новые закладки будут сохранены.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ не будет запоминать ничего из вашей истории или кук, но новые закладки будут сохранены.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Подробнее";
