--- a/Client/tl.lproj/PrivateBrowsing.strings
+++ b/Client/tl.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Isara ang Private Tabs";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Hindi maaalala ng Firefox ang alin man sa iyong history o cookies, pero ang mga bagong bookmark ay tatandaan.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Hindi maaalala ng CLIQZ ang alin man sa iyong history o cookies, pero ang mga bagong bookmark ay tatandaan.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Learn More";
