--- a/Client/tr.lproj/PrivateBrowsing.strings
+++ b/Client/tr.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "Gizli sekmeleri kapat";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox geçmişinizi ve çerezleri hatırlamayacaktır ama kaydettiğiniz yer imleri saklanacaktır.";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ geçmişinizi ve çerezleri hatırlamayacaktır ama kaydettiğiniz yer imleri saklanacaktır.";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "Daha fazla bilgi alın";
