--- a/Client/zh-CN.lproj/PrivateBrowsing.strings
+++ b/Client/zh-CN.lproj/PrivateBrowsing.strings
@@ -2,7 +2,7 @@
 "Close Private Tabs" = "关闭隐私标签页";
 
 /* Description text displayed when there are no open tabs while in private mode */
-"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "Firefox 不会记住您的历史记录和 Cookie，不过新的书签将被保留。";
+"Firefox won't remember any of your history or cookies, but new bookmarks will be saved." = "CLIQZ 不会记住您的历史记录和 Cookie，不过新的书签将被保留。";
 
 /* Text button displayed when there are no tabs open while in private mode */
 "Learn More" = "了解更多";
