Added Settings for Enable/Disabling Push Notifications for Breaking News.

--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -73,3 +73,6 @@
 
 /* Settings item for clearing private data on termination */
 "Clear Private data on termination" = "Private Daten beim Verlassen löschen";
+
+/* Enable News Push Notifications */
+"Enable News Push Notifications" = "Schlagzeilen Benachrichtigungen";
