--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -76,3 +76,18 @@
 
 /* Enable News Push Notifications */
 "Enable News Push Notifications" = "Schlagzeilen Benachrichtigungen";
+
+/* Show blocked top-sites from settings */
+"Show blocked topsites" = "Entfernte Topseiten anzeigen";
+
+/* Title of the 'Show blocked top-sites' alert */
+"Show blocked topsites" = "Entfernte Topseiten anzeigen";
+
+/* Text of the 'Show blocked top-sites' alert */
+"All blocked topsites will be shown on the start page again." = "Alle entfernten Topseiten werden wieder auf der Startseite angezeigt.";
+
+/* OK button in the 'Show blocked top-sites' alert */
+"OK" = "OK";
+
+/* Cancel button in the 'Show blocked top-sites' alert */
+"Cancel" = "Abbrechen";
