--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -76,3 +76,18 @@
 
 /* Enable News Push Notifications */
 "Enable News Push Notifications" = "News Notification";
+
+/* Show blocked top-sites from settings */
+"Show blocked topsites" = "Show blocked topsites";
+
+/* Title of the 'Show blocked top-sites' alert */
+"Show blocked topsites" = "Show blocked topsites";
+
+/* Text of the 'Show blocked top-sites' alert */
+"All blocked topsites will be shown on the start page again." = "All blocked topsites will be shown on the start page again.";
+
+/* OK button in the 'Show blocked top-sites' alert */
+"OK" = "OK";
+
+/* Cancel button in the 'Show blocked top-sites' alert */
+"Cancel" = "Cancel";
