--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -101,3 +101,9 @@
 
 /* Button label to `No` in news notification permission screen */
 "No thanks" = "Nein, danke";
+
+/* Description text displayed when there are no open tabs while in Forget mode */
+"Forget Mode" = "Vergessen Modus";
+
+/* Description text displayed when there are no open tabs while in Forget mode */
+"Browsing history and cookies will not be remembered, but new downloads and bookmarks will be saved." = "Webseiten-Verlauf und Cookies werden nicht gespeichert. Neue Downloads und Lesezeichen werden jedoch gespeichert.";
