--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -101,3 +101,9 @@
 
 /* Button label to `No` in news notification permission screen */
 "No thanks" = "No thanks";
+
+/* Description text displayed when there are no open tabs while in Forget mode */
+"Forget Mode" = "Forget Mode";
+
+/* Description text displayed when there are no open tabs while in Forget mode */
+"Browsing history and cookies will not be remembered, but new downloads and bookmarks will be saved." = "Browsing history and cookies will not be remembered, but new downloads and bookmarks will be saved.";
