--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -87,7 +87,17 @@
 "All blocked topsites will be shown on the start page again." = "All blocked topsites will be shown on the start page again.";
 
 /* OK button in the 'Show blocked top-sites' alert */
+/* Button label to `OK` in news notification permission screen */
 "OK" = "OK";
 
 /* Cancel button in the 'Show blocked top-sites' alert */
 "Cancel" = "Cancel";
+
+/* Button label to `Yes please!` in news notification permission screen */
+"Yes please!" = "Yes please!";
+
+/* Button label to `Later` in news notification permission screen */
+"Remind me later" = "Remind me later";
+
+/* Button label to `No` in news notification permission screen */
+"No thanks" = "No thanks";
