--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -107,3 +107,6 @@
 
 /* Description text displayed when there are no open tabs while in Forget mode */
 "Browsing history and cookies will not be remembered, but new downloads and bookmarks will be saved." = "Browsing history and cookies will not be remembered, but new downloads and bookmarks will be saved.";
+
+/* Context/Sharing menu item for downloading youtube videos */
+"Download youtube video" = "Make available offline";
