[IB-399] Redo ad-blocker settings menu to include fair blocking

--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -65,8 +65,16 @@
 /* Navigation title in settings */
 "Human Web" = "Human Web";
 
-/* Block Ads setting */
-"Block Ads" = "Block known ad servers";
+/* Block Ads setting
+ Block Ads toogle title in Block Ads settings */
+"Block Ads" = "Block Ads";
+
+/* Fair Blocking toogle title in Block Ads settings
+  Title of navigation controller of Fair Blocking */
+"Fair Blocking" = "Fair Blocking";
+
+/* More details about Fair Blocking */
+"What is 'fair'?" = "What is 'fair'?";
 
 /* Settings item for clearing favorite history */
 "Favorites" = "Favorites";
