--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -66,7 +66,14 @@
 "Human Web" = "Human Web";
 
 /* Block Ads setting */
-"Block Ads" = "Bekannte Ad-Server blockieren";
+"Block Ads" = "Werbung blockieren";
+
+/* Fair Blocking toogle title in Block Ads settings
+ Title of navigation controller of Fair Blocking */
+"Fair Blocking" = "Faires Blockieren";
+
+/* More details about Fair Blocking */
+"What is 'fair'?" = "Was bedeutet 'fair'?";
 
 /* Settings item for clearing favorite history */
 "Favorites" = "Favoriten";
