--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -129,10 +129,10 @@
 "Settings" = "Settings";
 
 /* New tab title */
-"New Tab" = "New Tab";
+"New Tab" = "Open New Tab";
 
 /* New private tab title */
-"New Private Tab" = "New Private Tab";
+"New Private Tab" = "Open New Forget Tab";
 
 /* Show images title */
 "Show Images" = "Show Images";
