--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -166,3 +166,15 @@
 
 /* Antitracking UI title for tracked count column */
 "Trackers count title" = "Private data points";
+
+/* Antiphishing alert title */
+"Warning: deceptive website!" =  "Warning: deceptive website!";
+
+/* Antiphishing alert message */
+"CLIQZ has blocked access to %1$ because it has been reported as a phishing website.Phishing websites disguise as other sites you may trust in order to trick you into disclosing your login, password or other sensitive information" = "CLIQZ has blocked access to %1$ because it has been reported as a phishing website.\nPhishing websites disguise as other sites you may trust in order to trick you into disclosing your login, password or other sensitive information.";
+
+/* Back to safe site buttun title in antiphishing alert title */
+"Back to safe site" = "Back to safe site";
+
+/* Continue despite warning buttun title in antiphishing alert title */
+"Continue despite warning" = "Continue despite warning";
