Updated the localization of opening a link in private tab when long pressing a link on the current page

--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -177,3 +177,6 @@
 
 /* Continue despite warning buttun title in antiphishing alert title */
 "Continue despite warning" = "Trotz der Warnung fortfahren";
+
+/* Context menu option for opening a link in a new private tab */
+"Open In New Forget Tab" = "In neuem Forget-Tab öffnen";
