--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -178,3 +178,6 @@
 
 /* Continue despite warning buttun title in antiphishing alert title */
 "Continue despite warning" = "Continue despite warning";
+
+/* Context menu option for opening a link in a new private tab */
+"Open In New Forget Tab" = "Open In New Forget Tab";
