--- a/Client/LocalizedStrings/en.lproj/ClearPrivateDataConfirm.strings
+++ b/Client/LocalizedStrings/en.lproj/ClearPrivateDataConfirm.strings
@@ -5,5 +5,5 @@
 "OK" = "OK";
 
 /* Description of the confirmation dialog shown when a user tries to clear their private data. */
-"This action will clear all of your private data. It cannot be undone." = "This action will clear all of your private data. It cannot be undone.";
+"This action will clear all of your private data. It cannot be undone." = "This action will clear the selected private browser data. This cannot be undone.";
 
