--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -159,7 +159,7 @@
 "Overview" = "Overview";
 
 /* Title on the tab view, when no URL is open on the tab */
-"Topsites" = "Topsites";
+"Topsites" = "Topsites and News";
 
 /* Antitracking UI top title */
 "Data is protected" = "Your data is protected";
