--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -63,7 +63,7 @@
 "Human Web" = "Human Web";
 
 /* Block Ads setting */
-"Block Ads" = "Werbung blockieren";
+"Block Ads" = "Werbung blockieren BETA";
 
 /* Fair Blocking toogle title in Block Ads settings
  Title of navigation controller of Fair Blocking */
