--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -82,13 +82,10 @@
 "Enable News Push Notifications" = "Eilmeldungen";
 
 /* Show blocked top-sites from settings */
-"Show blocked topsites" = "Entfernte Topseiten anzeigen";
-
-/* Title of the 'Show blocked top-sites' alert */
-"Show blocked topsites" = "Entfernte Topseiten anzeigen";
+"Show blocked topsites" = "Meist-besuchte Seiten wiederherstellen";
 
 /* Text of the 'Show blocked top-sites' alert */
-"All blocked topsites will be shown on the start page again." = "Alle entfernten Topseiten werden wieder auf der Startseite angezeigt.";
+"All blocked topsites will be shown on the start page again." = "AStartseite zeigt wieder deine meist-besuchten Seiten.";
 
 /* OK button in the 'Show blocked top-sites' alert */
 /* Button label to `OK` in news notification permission screen */
@@ -155,7 +152,7 @@
 "Overview" = "Übersicht";
 
 /* Title on the tab view, when no URL is open on the tab */
-"Topsites" = "Topseiten und News";
+"Topsites" = "Meist-besuchte Seiten und Nachrichten";
 
 /* Antitracking UI top title */
 "Data is protected" = "Deine Daten sind geschützt";
