--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -83,13 +83,10 @@
 "Enable News Push Notifications" = "News Notification";
 
 /* Show blocked top-sites from settings */
-"Show blocked topsites" = "Show blocked topsites";
-
-/* Title of the 'Show blocked top-sites' alert */
-"Show blocked topsites" = "Show blocked topsites";
+"Show blocked topsites" = "Restore most visited websites";
 
 /* Text of the 'Show blocked top-sites' alert */
-"All blocked topsites will be shown on the start page again." = "All blocked topsites will be shown on the start page again.";
+"All blocked topsites will be shown on the start page again." = "Start page shows most-visited websites again.";
 
 /* OK button in the 'Show blocked top-sites' alert */
 /* Button label to `OK` in news notification permission screen */
@@ -156,7 +153,7 @@
 "Overview" = "Overview";
 
 /* Title on the tab view, when no URL is open on the tab */
-"Topsites" = "Topsites and News";
+"Topsites" = "Most visited sites and News";
 
 /* Antitracking UI top title */
 "Data is protected" = "Your data is protected";
