Changed title for Favorite in TabManager

--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -73,7 +73,7 @@
 "What is 'fair'?" = "Was bedeutet 'fair'?";
 
 /* Settings item for clearing favorite history */
-"Favorites" = "Inklusive Favoriten";
+"Favorites" = "Favoriten";
 
 /* Settings item for clearing private data on termination */
 "Clear Private data on termination" = "Private Daten beim Verlassen löschen";
