--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -191,3 +191,5 @@
 /* Thrid card text in onBorading */
 "When you share your location, you also get results for locations near you (Google Maps)" = "When you share your location, you also get results for locations near you (Google Maps)";
 
+/* Start buttun title for onBorading */
+"Let's start!" = "Let's start!";
