--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -83,7 +83,7 @@
 "Enable News Push Notifications" = "News Notification";
 
 /* Show blocked top-sites from settings */
-"Show blocked topsites" = "Restore most visited websites";
+"Show blocked topsites" = "Restore Most Visited Websites";
 
 /* Text of the 'Show blocked top-sites' alert */
 "All blocked topsites will be shown on the start page again." = "Start page shows most-visited websites again.";
