Provided `NSPhotoLibraryUsageDescription` to prevent the app crash on iOS10

--- a/Client/LocalizedStrings/de.lproj/InfoPlist.strings
+++ b/Client/LocalizedStrings/de.lproj/InfoPlist.strings
@@ -4,3 +4,4 @@
 
 "ShortcutItemTitleNewTab" = "Neuer Tab";
 
+"NSPhotoLibraryUsageDescription" = "CLIQZ wird diesen Zugriff nur nutzen um Videos auf dein Gerät herunterzuladen.";
