--- a/Client/LocalizedStrings/en.lproj/InfoPlist.strings
+++ b/Client/LocalizedStrings/en.lproj/InfoPlist.strings
@@ -4,3 +4,4 @@
 
 "ShortcutItemTitleNewTab" = "New Tab";
 
+"NSPhotoLibraryUsageDescription" = "CLIQZ will only use this access to download videos to your device.";
