--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -111,7 +111,7 @@
 "Browsing history and cookies will not be remembered, but new downloads and bookmarks will be saved." = "Browsing history and cookies will not be remembered, but new downloads and bookmarks will be saved.";
 
 /* Context/Sharing menu item for downloading youtube videos */
-"Download youtube video" = "Make available offline";
+"Download youtube video" = "view video offline";
 
 /* History title on dashboard */
 "History" = "History";
