--- a/Client/LocalizedStrings/de.lproj/Localizable.strings
+++ b/Client/LocalizedStrings/de.lproj/Localizable.strings
@@ -408,7 +408,7 @@
 "Show Tabs" = "Tabs anzeigen";
 
 /* Show the on-boarding screen again from the settings */
-"Show Tour" = "Rundgang anzeigen";
+"Show Tour" = "Tipps anzeigen";
 
 /* Label for show search suggestions setting. */
 "Show search suggestions" = "Suchvorschläge anzeigen";
