--- a/Client/LocalizedStrings/en.lproj/Localizable.strings
+++ b/Client/LocalizedStrings/en.lproj/Localizable.strings
@@ -408,7 +408,7 @@
 "Show Tabs" = "Show Tabs";
 
 /* Show the on-boarding screen again from the settings */
-"Show Tour" = "Show Tour";
+"Show Tour" = "Show Hint";
 
 /* Label for show search suggestions setting. */
 "Show search suggestions" = "Show search suggestions";
