--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -179,7 +179,7 @@
 "Continue despite warning" = "Trotz der Warnung fortfahren";
 
 /* Context menu option for opening a link in a new private tab */
-"Open In New Forget Tab" = "In neuem Forget-Tab öffnen";
+"Open In New Forget Tab" = "In neuem Vergessen-Tab öffnen";
 
 /* First card text in onBorading */
 "The first browser with a built-in quick-search\nno detours, directly to the right destination." = "DIE SUCHMASCHINE IM BROWSER\n\nImmer auf dem schnellsten Weg zum Ziel!";
